--- a/Zabor/Views/Calculator/Index.cshtml
+++ b/Zabor/Views/Calculator/Index.cshtml
@@ -1,60 +1,34 @@
 ﻿
 
 @{
-    ViewBag.Title = "title";
+    ViewData["Title"] = "Рассчёт стоимости бетонного забора | Брянск";
+    ViewData["MetaDescription"] = "Рассчёт стоимости бетонного забора в Брянске и Брянской области";
+    ViewData["MetaKeywords"] = "рассчёт стоимости бетонного забора,заборы в Брянске,брянск,стоимость заборов брянск,заборы брянск";
+
     Layout = "_Layout";
 }
+
+
+<style>
+    td {
+        text-align: right;
+    }
+</style>
 
 <div class="content">
 
 
-    <h1>Рассчитать стоимость бетонного забора</h1>
-
-
-    <p>Для того  чтобы рассчитать стоимость покупки и установки декоративного железобетонного забора необходимо заполнить представленную ниже форму.</p>
-    <p>В этой форме нужно указать длину участка (в метрах), на котором будет установлен забор, выбрать высоту забора (одна плита имеет высоту 0,5 метра), а также выбрать тип плиты, указав её название. Плиты представлены на странице <a href="/mc/8/">Бетонные заборы. Плиты.</a></p>
-    <p>После заполнения формы и установки всех параметров необходимо нажать кнопку «Рассчитать». Делее будет рассчитана примерная стоимость покупки и установки декоративного железобетонного забора без  учета нюансов(специфика рельефа и индивидуальные пожелания заказчика).</p>
-    <hr color="#854b00" width="570" align="left">
-    <p></p><form action="#" method="POST">
-        <table>
-            <tbody>
-                <tr>
-                    <td><p style="font-size:12px; color:#5F5F5F;">Длина забора:</p></td>
-                    <td style="padding-left:10px; font-size:12px; color:#5F5F5F;"><p><input type="text" name="width" value="0" size="22"> , метров</p></td>
-                </tr>
-                <tr>
-                    <td><p style="font-size:12px; color:#5F5F5F;">Количество поворотов:</p></td>
-                    <td style="padding-left:10px;"><p><input type="text" name="pov" value="0" size="22"></p></td>
-                </tr>
-                <tr>
-                    <td><p style="font-size:12px; color:#5F5F5F;">Высота забора:</p></td>
-                    <td style="padding-left:10px; font-size:12px; color:#5F5F5F;">
-                        <p>
-                            <select name="height" style="width:100px;">
-                                <option value="300">
-                                    0.5
-                                </option>
-                                <option value="350">
-                                    1
-                                </option>
-                                <option value="400">
-                                    1.5
-                                </option>
-                                <option value="450">
-                                    2
-                                </option>
-                                <option value="550">
-                                    2.5
-                                </option>
-                            </select> , метра
-                        </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td><p style="font-size:12px; color:#5F5F5F;">Название плиты:</p></td>
-                    <td style="padding-left:10px; font-size:12px; color:#5F5F5F;">
-                        <p>
-                            <select name="name">
+    <h1>Рассчёт стоимости бетонного забора</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table">
+                <tbody id="calculate-table">
+                    <tr>
+                        <td>
+                            <label>Название плиты</label>
+                        </td>
+                        <td>
+                            <select class="form-control input-sm">
                                 <option value="280">
                                     Плита № 1
                                 </option>
@@ -142,17 +116,74 @@
                                 <option value="280">
                                     Плита № 29
                                 </option>
-                            </select>&nbsp;&nbsp;&nbsp;<a href="/mc/8/" target="_blank">посмотреть плиты</a>
-                        </p>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <p><input type="submit" name="summa" class="sub" value="Рассчитать"></p>
-    </form>
-    <hr color="#854b00" width="570" align="left">
-    <p></p>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label>Длина забора</label>
+                        </td>
+                        <td><input class="form-control input-sm" /></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label>Количество поворотов</label>
+                        </td>
+                        <td><input class="form-control input-sm" /></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label>Высота забора</label>
+                        </td>
+                        <td>
+                            <select class="form-control input-sm">
+                                <option value="300">
+                                    0.5
+                                </option>
+                                <option value="350">
+                                    1
+                                </option>
+                                <option value="400">
+                                    1.5
+                                </option>
+                                <option value="450">
+                                    2
+                                </option>
+                                <option value="550">
+                                    2.5
+                                </option>
+                            </select>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
+    <button id="calculate" class="btn btn-primary">Рассчитать</button>
+
+    <script>
+        var buttton = document.getElementById("calculate");
+        buttton.addEventListener("click", function () {
+
+            var oldTr = document.getElementsByClassName("tr_sum");
+            if (oldTr.length > 0)
+                oldTr.remove();
+
+            var table = document.getElementById("calculate-table");
+            var tr = document.createElement("tr");
+            tr.classList.add("tr_sum");
+            var td1 = document.createElement("td");
+            var td2 = document.createElement("td");
+            debugger;
+            td1.innerHTML = "<label>Итого</label>";
+            td2.innerHTML = "<span style=\"float:left;font-weight:bold;\">255353 руб</span>";
+            tr.appendChild(td1);
+            tr.appendChild(td2);
+            table.appendChild(tr);
+        });
+
+    </script>
 
 
 
