--- a/Zabor/Views/Shared/_Layout.cshtml
+++ b/Zabor/Views/Shared/_Layout.cshtml
@@ -19,7 +19,8 @@
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
     </environment>
 </head>
 <body>
@@ -62,6 +63,9 @@
                         </ul>
                     </li>*@
                     @*<li><a asp-area="" asp-controller="Photogallery" asp-action="Index">Галерея</a></li>*@
+                    <li><a asp-area="" asp-controller="Calculator" asp-action="Index">
+                        <i style="position: absolute;font-size: 23px" class="fa fa-2x fa-calculator" aria-hidden="true"></i>
+                    </a></li>
 
                 </ul>
 
@@ -168,7 +172,7 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
