--- a/Zabor/Views/Home/Index.cshtml
+++ b/Zabor/Views/Home/Index.cshtml
@@ -5,23 +5,25 @@
 }
 
 <style>
-    header.masthead {
-        text-align: center;
-        color: #fff;
-        background-image: url(https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg);
-        background-repeat: no-repeat;
-        background-attachment: scroll;
-        background-position: center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
 
-        header.masthead .intro-text {
-            padding-top: 150px;
-            padding-bottom: 150px;
-        }
+
+     header.masthead {
+         text-align: center;
+         color: #fff;
+         background-image: url(https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg);
+         background-repeat: no-repeat;
+         background-attachment: scroll;
+         background-position: center center;
+         -webkit-background-size: cover;
+         -moz-background-size: cover;
+         -o-background-size: cover;
+         background-size: cover;
+     }
+
+    header.masthead .intro-text {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
 
     header.masthead .intro-text .intro-lead-in {
         font-size: 40px;
@@ -36,14 +38,9 @@
         line-height: 75px;
         margin-bottom: 50px;
         font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;}
-
-
-
-    
-
 </style>
 
-<header class="masthead" style="">
+<header class="masthead" style="margin-top: 20px;">
     <div class="">
         <div class="intro-text">
             <div class="intro-lead-in">Welcome To Our Studio!</div>
