--- a/Zabor/Views/Products/Doors.cshtml
+++ b/Zabor/Views/Products/Doors.cshtml
@@ -11,10 +11,10 @@
 <div class="">
 
 
-    <h1>Металлические двери в Брянске</h1>
+    <h1>Металлические двери</h1>
 
 
-    <p>В нашей компании можно купить входные <strong>металлические двери</strong> различной ценовой категории: от экономичных, доступных людям с небольшим достатком, до эксклюзивных моделей, изготавливаемых индивидуально на заказ.</p>
+    <p>Двери являются одним из важнейших элементов в конструкции дома, так как отвечают за безопасность и эстетическую завершенность жилища. Наша компания предлагает широкий выбор металлических дверей по разным ценовым категориям. Также мы предоставляем услуги по изготовлению эксклюзивных моделей. Специалисты нашей компании подберут двери, которые будут идеально подходить к интерьеру Вашего дома</p>
 
     <div class="row">
         <div class="col-sm-6 col-md-4">
