--- a/Zabor/Views/Products/Forge.cshtml
+++ b/Zabor/Views/Products/Forge.cshtml
@@ -17,10 +17,14 @@
     <h1>Ковка</h1>
 
 
-    <p>Изделия художественной ковки – это сочетание изящества и прочности. Они долговечны и не требуют никакого особого ухода. &nbsp;Можете быть уверены, &nbsp;что ковка никогда не выйдет из моды. Наряду с типовыми решениями, мы можем изготовить любой индивидуальный заказ по Вашему эскизу. Если вы хотите создать уникальный стиль для своего интерьера &nbsp;– &nbsp;это именно то, что вам нужно.&nbsp;</p>
-    
-    
-    
+    <p>
+        Наша компания предоставляет широкий спектр, как стандартных изделий, так и изделий по Вашему индивидуальному заказу. Конструкции отличаются прочностью, долговечностью и не требует особого ухода.
+    </p> 
+    <p>
+        Изделия художественной ковки: современно, стильно, изысканно, богато.
+    </p>
+
+
     <div class="row">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
@@ -68,6 +72,6 @@
             </div>
         </div>
     </div>
-    
-    
+
+
 </div>
