--- a/Zabor/Views/Products/Gates.cshtml
+++ b/Zabor/Views/Products/Gates.cshtml
@@ -15,9 +15,7 @@
     <h1>Металлические ворота</h1>
 
 
-    <p>Ворота имеют такое значение по отношению к дому, как, например, фотография в паспорте, поэтому к выбору ворот стоит относиться ответственно.</p>
-    <p>Металлические ворота&nbsp;—&nbsp;это самый оптимальный путь решения данной задачи . Они прекрасно сочетаются с заборами из профлиста, бетона, камня и пр. Существует множество вариаций форм и ковки металлических ворот, благодаря чему вы без труда сможете выбрать ворота наиболее подходящие вашему ограждению. Также металлические ворота отличаются высокой надежностью и долговечностью. Если вы выбрали металлические ворота вы можете больше не беспокоиться, ваш дом под надежной охраной.</p>
-    <div>&nbsp;</div>
+    <p>Металлические ворота – это традиционные решения, которые популярны во все времена. Надежные и прочные ворота будут гарантом не только безопасности, но и эффектным обрамлением вашей территории. Конструкции с элементами ковки создают неповторимый стиль оформления территории объекта, будь-то частный дом или офисное здание.</p>
 
 
     <div class="row">
