--- a/Zabor/Views/Home/Index.cshtml
+++ b/Zabor/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
         font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;}
 </style>
 
-<header class="masthead" style="margin-top: 20px;">
+<header class="masthead" style="margin-top: 30px;">
     <div class="">
         <div class="intro-text">
             <div class="intro-lead-in">Welcome To Our Studio!</div>
@@ -61,7 +61,7 @@
     <div class="">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Services</h2>
+                <h2 class="section-heading text-uppercase">Бетонные заборы. Установка железобетонных заборов в Брянске и Брянской области.</h2>
                 <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
         </div>
@@ -139,24 +139,3 @@
 </section>
 
 
-<div class="content">
-
-
-    <h1>Бетонные заборы. Установка железобетонных заборов в Брянске и Брянской области.</h1>
-
-    <p><strong>Свой дом&nbsp;—&nbsp;это огромная ценность но, в тоже время, большая ответственность!</strong></p>
-    <p>Поэтому во все времена человек старался защитить и украсить его. Главной защитой являлся не щит и меч, а надежная крепкая ограда. Изначально она представляла небольшой деревянный частокол, но уже к средним векам хрупкое деревянное сооружение переросло в непреодолимые каменные небоскребы. Но времена меняются и функции заборов тоже. На смену тяжелым каменным стенам пришли более легкие, декоративные<strong>,</strong> но не менее прочные<strong> </strong>железобетонные заборы, главной функцией которых является украшение вашего участка.</p>
-    <p>В настоящее время бетонные заборы настолько популярны, что выходя на улицу города трудно их не заметить. Также стремительно растет спрос у обладателей загородных участков. Декоративные железобетонные заборы вне конкуренции по цене и красоте внешнего вида по отношению, например, с кирпичными, намного прочнее и долговечнее деревянных.</p>
-    <p>Помимо этого изделия из бетона обладают целым рядом уникальных свойств:</p>
-    <p>
-        <span style="font-size: smaller; "><em>—&nbsp;низкие эксплуатационные расходы;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp;легкость покраски;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp;разнообразие форм и видов.</em></span>
-    </p>
-    <p>Наша компания занимается производством, доставкой и установкой<strong> </strong>бетонных заборов. Разнообразие выбора и многолетний опыт работы гарантируют отличный результат. У нас вы найдете то, что вам нужно для вашего дома, дачи или загородного участка. <a href="/mc/8/">Заборы разных форм и видов</a>, а также всевозможные калитки и садово-парковые изделия, и все это по доступным для вас ценам.</p>
-    <p style="text-align: center; ">&nbsp;</p>
-    <p style="text-align: center; "><span style="color: rgb(0, 0, 0); "><span style="font-size: larger; "><em>Все будет установлено качественно и в срок!</em></span></span></p>
-
-
-
-</div>
