--- a/Zabor/Views/GargenPark/Benches.cshtml
+++ b/Zabor/Views/GargenPark/Benches.cshtml
@@ -14,7 +14,7 @@
     <h1>Скамейки</h1>
 
 
-    <p>Конечно, все мы хотим, чтобы мебель на приусадебном участке была такой, чтобы можно было бы наслаждаться комфортом и отдыхом. В тандеме со столами и стульями нашего производства, скамейки создадут замечательный комплект мебели для вашего участка. Наши скамейки прочны и долговечны, а так же отвечают всем требованиям современного дизайна.</p>
+    <p>@*Конечно, все мы хотим, чтобы мебель на приусадебном участке была такой, чтобы можно было бы наслаждаться комфортом и отдыхом. В тандеме со столами и стульями нашего производства, скамейки создадут замечательный комплект мебели для вашего участка. Наши скамейки прочны и долговечны, а так же отвечают всем требованиям современного дизайна.*@</p>
 
     <div class="row">
         <div class="col-sm-6 col-md-4">
