--- a/Zabor/Views/GargenPark/Canopies.cshtml
+++ b/Zabor/Views/GargenPark/Canopies.cshtml
@@ -14,7 +14,7 @@
     <h1>Навесы</h1>
 
 
-    <p>Не каждый день стоит безоблачная погода. Но дождь это не повод отказываться от посиделок на свежем воздухе. &nbsp;Или же другой вариант – палящее солнце, и все чего хочется тени и прохлады. И если для строительства массивной веранды нет ни места, ни желания, навес – идеальное решение. &nbsp;Его размеры будут ограничены лишь вашими пожеланиями. &nbsp;</p>
+    <p>@*Не каждый день стоит безоблачная погода. Но дождь это не повод отказываться от посиделок на свежем воздухе. &nbsp;Или же другой вариант – палящее солнце, и все чего хочется тени и прохлады. И если для строительства массивной веранды нет ни места, ни желания, навес – идеальное решение. &nbsp;Его размеры будут ограничены лишь вашими пожеланиями. &nbsp;*@</p>
 
     <div class="row">
         <div class="col-sm-6 col-md-4">
