--- a/Zabor/Views/GargenPark/Chairs.cshtml
+++ b/Zabor/Views/GargenPark/Chairs.cshtml
@@ -14,7 +14,7 @@
     <h1>Стулья</h1>
 
 
-    <p>Садовые стулья необходимый предмет любой наружной мебели. Они залог комфортного отдыха на вашем дачном участке или дворе. &nbsp;На сегодняшний день перед нами всевозможные варианты стульев из различного &nbsp;материала, цветов и форм. Пластмассовые, раскладные и охотничьи стулья хоть и &nbsp;более доступны по цене, но проигрывают кованым как по внешнему виду, так и по качеству, практичности &nbsp;и долговечности. Наша компания предлагает кованые стулья различных форм и фактур.&nbsp;</p>
+    <p>@*Садовые стулья необходимый предмет любой наружной мебели. Они залог комфортного отдыха на вашем дачном участке или дворе. &nbsp;На сегодняшний день перед нами всевозможные варианты стульев из различного &nbsp;материала, цветов и форм. Пластмассовые, раскладные и охотничьи стулья хоть и &nbsp;более доступны по цене, но проигрывают кованым как по внешнему виду, так и по качеству, практичности &nbsp;и долговечности. Наша компания предлагает кованые стулья различных форм и фактур.&nbsp;*@</p>
 
 
     <div class="row">
