--- a/Zabor/Views/GargenPark/Chargrills.cshtml
+++ b/Zabor/Views/GargenPark/Chargrills.cshtml
@@ -14,7 +14,7 @@
     <h1>Мангалы</h1>
 
 
-    <p>Собраться большой компанией на свежем воздухе и пожарить шашлык – одно из лучших время препровождений в теплое время года. &nbsp;Сегодня мангал – непременный атрибут любой такой посиделки. &nbsp;У хорошего хозяина мангал обязательно будет и функциональным, и красивым. Именно такие мангалы мы предлагаем вашему вниманию.&nbsp;</p>
+    <p>@*Собраться большой компанией на свежем воздухе и пожарить шашлык – одно из лучших время препровождений в теплое время года. &nbsp;Сегодня мангал – непременный атрибут любой такой посиделки. &nbsp;У хорошего хозяина мангал обязательно будет и функциональным, и красивым. Именно такие мангалы мы предлагаем вашему вниманию.&nbsp;*@</p>
 
     <div class="row">
         <div class="col-sm-6 col-md-4">
