--- a/Zabor/Views/GargenPark/Tables.cshtml
+++ b/Zabor/Views/GargenPark/Tables.cshtml
@@ -14,7 +14,7 @@
     <h1>Столы</h1>
 
 
-    <p>Садовые столы просто незаменимы для создания уютной домашней атмосферы в вашем дворе. В сочетании с набором стульев создадут интересные садовые группы. Столы из дерева и металла наиболее долговечны, прекрасно переносят любые капризы природы и имеют отличный внешний вид. &nbsp;Для Вас мы можем изготовить столы различных размеров, учитывая все ваши пожелания.&nbsp;</p>
+    <p>@*Садовые столы просто незаменимы для создания уютной домашней атмосферы в вашем дворе. В сочетании с набором стульев создадут интересные садовые группы. Столы из дерева и металла наиболее долговечны, прекрасно переносят любые капризы природы и имеют отличный внешний вид. &nbsp;Для Вас мы можем изготовить столы различных размеров, учитывая все ваши пожелания.&nbsp;*@</p>
 
     <div class="row">
         <div class="col-sm-6 col-md-4">
