--- a/Zabor/Views/GargenPark/Visors.cshtml
+++ b/Zabor/Views/GargenPark/Visors.cshtml
@@ -15,7 +15,7 @@
     <h1>Козырьки</h1>
 
 
-    <p>Козырек над входом – первое, что видят приходящие в Ваш дом. Раньше козырьки изготавливались кузнецами вручную, поэтому были элементом роскоши и показателем достатка. Но времена когда они были доступны лишь немногим давно прошли. Сегодня установка козырька доступна очень многим и не требует крупных финансовых затрат. &nbsp;Козырек укроет от дождя и зноя и украсят фасад Вашего дома.</p>
+    <p>@*Козырек над входом – первое, что видят приходящие в Ваш дом. Раньше козырьки изготавливались кузнецами вручную, поэтому были элементом роскоши и показателем достатка. Но времена когда они были доступны лишь немногим давно прошли. Сегодня установка козырька доступна очень многим и не требует крупных финансовых затрат. &nbsp;Козырек укроет от дождя и зноя и украсят фасад Вашего дома.*@</p>
 
     <div class="row">
         <div class="col-sm-6 col-md-4">
