--- a/Zabor/Views/Home/Index.cshtml
+++ b/Zabor/Views/Home/Index.cshtml
@@ -43,8 +43,8 @@
 <header class="masthead" style="margin-top: 30px;">
     <div class="">
         <div class="intro-text">
-            <div class="intro-lead-in">Welcome To Our Studio!</div>
-            <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+            <div class="intro-lead-in">Надежная защита вашего уюта!</div>
+            <div class="intro-heading text-uppercase">Надежная защита вашего уюта</div>
             <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
         </div>
     </div>
@@ -62,33 +62,32 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Бетонные заборы. Установка железобетонных заборов в Брянске и Брянской области.</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
         </div>
         <div class="row text-center">
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    <i style="color: #2b9;" class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">E-Commerce</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <h4 class="service-heading">Строгое соблюдение установленных сроков</h4>
+                @*<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>*@
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    <i style="color: #2b9;" class="fa fa-circle fa-stack-2x text-success"></i>
+                    <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Responsive Design</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <h4 class="service-heading">Выгодные цены</h4>
+                @*<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>*@
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                    <i style="color: #2b9;" class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-star fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Web Security</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <h4 class="service-heading">Использование только высококачественных материалов / сырья</h4>
+                @*<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>*@
             </div>
         </div>
     </div>
@@ -99,7 +98,7 @@
     <div class="">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Portfolio</h2>
+                <h2 class="section-heading text-uppercase">Продукция</h2>
                 <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
         </div>
