--- a/Zabor/Views/Home/Index.cshtml
+++ b/Zabor/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
     }
 
     header.masthead .intro-text .intro-lead-in {
-        font-size: 40px;
+        font-size: 50px;
         font-style: italic;
         line-height: 40px;
         margin-bottom: 25px;
@@ -44,8 +44,7 @@
     <div class="">
         <div class="intro-text">
             <div class="intro-lead-in">Надежная защита вашего уюта!</div>
-            <div class="intro-heading text-uppercase">Надежная защита вашего уюта</div>
-            <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+            <a class="btn btn-primary btn-lg text-uppercase" asp-controller="Fences" asp-action="Cement">Подробнее</a>
         </div>
     </div>
 </header>
@@ -61,7 +60,7 @@
     <div class="">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Бетонные заборы. Установка железобетонных заборов в Брянске и Брянской области.</h2>
+                <h2 class="section-heading text-uppercase">Бетонные заборы. Установка железобетонных заборов в Брянске и Брянской области</h2>
             </div>
         </div>
         <div class="row text-center">
@@ -86,7 +85,7 @@
                     <i style="color: #2b9;" class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-star fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Использование только высококачественных материалов / сырья</h4>
+                <h4 class="service-heading">Использование только высококачественных материалов</h4>
                 @*<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>*@
             </div>
         </div>
