--- a/Zabor/Views/Shared/_Layout.cshtml
+++ b/Zabor/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
                         <li><a asp-area="" asp-controller="Fences" asp-action="Slave">Рабица</a></li>
                         
                         <li class="navbar_label">
-                            <a href="#" class="navbar_label-name">Другая продукция</a>
+                            <a href="#" class="navbar_label-name">Изделия из металла</a>
                         </li>
                         <li><a asp-area="" asp-controller="Products" asp-action="Gates">Ворота</a></li>
                         <li><a asp-area="" asp-controller="Products" asp-action="Forge">Ковка</a></li>
