--- a/Zabor/Views/Home/Index.cshtml
+++ b/Zabor/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 
     header.masthead .intro-text {
         padding-top: 120px;
-        padding-bottom: 120px;
+        padding-bottom: 70px;
     }
 
     header.masthead .intro-text .intro-lead-in {
@@ -38,13 +38,22 @@
         line-height: 75px;
         margin-bottom: 50px;
         font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;}
+
+    .intro-text a {
+        background-color: #2b9;
+        color: white;
+    }
+        .intro-text a:hover, .intro-text a:focus {
+            background-color: #34425C;
+            color:white;
+        }
 </style>
 
 <header class="masthead" style="margin-top: 30px;">
     <div class="">
         <div class="intro-text">
-            <div class="intro-lead-in">Надежная защита вашего уюта!</div>
-            <a class="btn btn-primary btn-lg text-uppercase" asp-controller="Fences" asp-action="Cement">Подробнее</a>
+            <div style="margin-bottom:70px;" class="intro-lead-in">Надежная защита вашего уюта!</div>
+            <a class="btn btn-lg text-uppercase" asp-controller="Fences" asp-action="Cement">Подробнее</a>
         </div>
     </div>
 </header>
@@ -98,38 +107,37 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Продукция</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-6 col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                <a href="/Products/Gates" class="thumbnail">
+                    <img src="/images/gates/2.jpg" alt="...">
                 </a>
             </div>
             <div class="col-xs-6 col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                <a href="/Products/Forge" class="thumbnail">
+                    <img src="/images/forge/1.jpg" alt="...">
                 </a>
             </div>
             <div class="col-xs-6 col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                <a href="/Fences/Cement" class="thumbnail">
+                    <img src="~/images/bg-header.jpg" alt="...">
                 </a>
             </div>
             <div class="col-xs-6 col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                <a href="GargenPark/Benches" class="thumbnail">
+                    <img src="/images/benches/5.jpg" alt="...">
                 </a>
             </div>
             <div class="col-xs-6 col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                <a href="GargenPark/Canopies" class="thumbnail">
+                    <img src="/images/canopies/1.jpg" alt="...">
                 </a>
             </div>
             <div class="col-xs-6 col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg" alt="...">
+                <a href="/Fences/Cement" class="thumbnail">
+                    <img src="~/images/File0014_01.jpg" alt="...">
                 </a>
             </div>
         </div>
